plugins {
	id 'java'
	id 'java-library'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation project( ':adapters')
	implementation project( ':domain')
	implementation project( ':app')

	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'javax.xml.bind:jaxb-api:2.3.1'
}

springBoot {
	mainClass= 'pl.janksiegowy.backend.Application'
}

bootJar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	mainClass= 'pl.janksiegowy.backend.Application'
}

allprojects {
	group= 'pl.janksiegowy'
	version= '0.0.1'
	sourceCompatibility = '21'
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	dependencies {
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		implementation 'org.springframework.boot:spring-boot-starter'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}
}

